<resources>
    <string name="app_name">TODO List, Task &amp; Reminder</string>
    <string name="categories">Categories</string>
    <string name="search_in_categories">Search in categories</string>
    <string name="add_new_category">Add New Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="type_a_category">Type a category</string>
    <string name="search_in_tasks">Search in</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="type_a_task">Type a task</string>
    <string name="choose_task_date_time">Choose Task Date</string>
    <string name="save">Save</string>
    <string name="warning">Warning</string>
    <string name="ok">OK</string>
    <string name="warning_category_message">This category is already exists</string>
    <string name="warning_todo_message">This task is already exists</string>
    <string name="delete">DELETE</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_category_message">Are you sure you want to delete this category?</string>
    <string name="delete_task">Delete Task</string>
    <string name="delete_task_message">Are you sure you want to delete this task?</string>
    <string name="favorites">Favorites</string>
    <string name="search_favorites">Search in favorites</string>
    <string name="choose_notification_tone">Choose Notification Tone</string>
</resources>