<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/newCategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="monospace"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/add_new_category"
        android:textAlignment="center"
        android:textColor="@color/custom_dark_gray"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/newCategoryEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/disabled_edit_text_border"
        android:fontFamily="monospace"
        android:hint="@string/type_a_category"
        android:maxLength="30"
        android:padding="20dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textCursorDrawable="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveCategoryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newCategoryEditText"
        android:layout_margin="20dp"
        android:background="@color/custom_dark_blue"
        android:fontFamily="monospace"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16dp" />
</RelativeLayout>