<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/newTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/newTaskEditText"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@null"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:text="@string/add_new_task"
        android:textAlignment="center"
        android:textColor="@color/custom_dark_gray"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/newTaskEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/custom_dark_gray"
        android:hint="@string/type_a_task"
        android:maxLength="30"
        android:padding="20dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textCursorDrawable="@null" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveTaskButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTaskEditText"
        android:layout_margin="20dp"
        android:background="@color/custom_dark_gray"
        android:enabled="false"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="16dp" />
</RelativeLayout>